Feat: updated reminder features and view. Refactor: optimized DB queries via JOIN FETCH, added Caffeine cache, tuned HikariCP, and fixed blocking screen lifecycle